crates/compiler/tests/parse_errors/record_pattern_field.txt
-- UNFINISHED RECORD PATTERN -------------------------------------- src/Main.elm

I was partway through parsing a record pattern, but I got stuck here:

4|   { @ } -> 1
       ^
I was expecting to see a field name next.

Hint: A record pattern looks like {x,y} or {name,age} where you list the field
names you want to access.

